--- a/Floradex.html
+++ b/Floradex.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
       <div class="inner row">
         <div class="logo col-lg-2 col-md-2">
-          <a href="index.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
+          <a href="../public/index.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
         </div>
         <div class="header-right col-lg-10 col-md-10">
           <div class="main-menu">
@@ -74,8 +74,8 @@
     <div class="header-top">
       <div class="container">
         <div class="logo text-center">
-          <a href="index.html" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
-          <a href="Floradex.html" title="logo"><img alt="logo-theme" src="images/FloraDex/Floradex.png"
+          <a href="/" title="logo"><img alt="logo-theme" src="images/logo.png" class="img-responsive" /></a>
+          <a href="/" title="logo"><img alt="logo-theme" src="images/FloraDex/Floradex.png"
               class="img-responsive" /></a>
         </div>
       </div>
@@ -121,7 +121,7 @@
     <div class="menu-popup-body">
       <ul class="navbar-menu">
         <li class="items">
-          <a href="index.html"><span>Home</span></a>
+          <a href="/"><span>Home</span></a>
         </li>
         <li class="items">
           <a href="Floradex.html"><span>Floradex</span></a>
@@ -144,7 +144,7 @@
       <nav class="navbar navbar-offcanvas navbar-static">
         <ul class="nav navbar-nav">
           <li class="level1 active hassub">
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
           </li>
           <li class="level1 hassub">
             <a href="Floradex.html">Floradex </a>
@@ -168,8 +168,8 @@
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
             <div class="menu-footer">
               <ul>
-                <li><a href="index.html" id="coppy">Home</a></li>
-                <li><a href="Floradex.html" id="coppy">Floradex</a></li>
+                <li><a href="../public/index.html" id="coppy">Home</a></li>
+                <li><a href="../floradex.html" id="coppy">Floradex</a></li>
                 <li><a href="/" id="coppy"> Terms of Use </a></li>
               </ul>
             </div>
