--- a/public/Floradex.html
+++ b/public/Floradex.html
@@ -121,13 +121,13 @@
     <div class="menu-popup-body">
       <ul class="navbar-menu">
         <li class="items">
-          <a href="/"><span>Home</span></a>
+          <a href="index.html"><span>Home</span></a>
         </li>
         <li class="items">
           <a href="Floradex.html"><span>Floradex</span></a>
         </li>
         <li class="items">
-          <a href="/"><span>Contact Us</span></a>
+          <a href="index.html"><span>Contact Us</span></a>
         </li>
       </ul>
     </div>
@@ -144,7 +144,7 @@
       <nav class="navbar navbar-offcanvas navbar-static">
         <ul class="nav navbar-nav">
           <li class="level1 active hassub">
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="level1 hassub">
             <a href="Floradex.html">Floradex </a>
@@ -168,8 +168,8 @@
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
             <div class="menu-footer">
               <ul>
-                <li><a href="../public/index.html" id="coppy">Home</a></li>
-                <li><a href="../floradex.html" id="coppy">Floradex</a></li>
+                <li><a href="index.html" id="coppy">Home</a></li>
+                <li><a href="floradex.html" id="coppy">Floradex</a></li>
                 <li><a href="/" id="coppy"> Terms of Use </a></li>
               </ul>
             </div>
